# BabyMonitorVL

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
babymonitorvl/: __init__.py  config.py  coordinates.py  events.py  ffmpeg.py  history.py  main.py  monitor.py  prompt.py  schemas.py  stabilizer.py
babymonitorvl/providers/: __init__.py  base.py  gemini.py  ollama.py
docs/: ANALYSIS_CONTRACT.md  ARCHITECTURE.md  DEVELOPMENT.md  GEMINI_PROVIDER.md  PROVIDER_COMPATIBILITY.md  PROVIDER_SMOKE_EVIDENCE.md  RELEASE.md  STABILIZATION.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
tests/: test_api.py  test_config.py  test_contract_sync.py  test_ffmpeg.py  test_gemini_provider.py  test_history.py  test_monitor.py  test_ollama_provider.py  test_release_metadata.py  test_schemas_prompt.py  test_stabilizer.py  test_websocket.py
