[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "babymonitorvl"
version = "0.1.0"
description = "LLM-only RTSP baby monitor MVP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "google-genai>=2.0,<3",
  "httpx>=0.27,<1",
  "pydantic>=2.9,<3",
  "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["babymonitorvl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
